--- a/archivo_1.html
+++ b/archivo_1.html
@@ -7,6 +7,8 @@
     <title>Documento 1</title>
 </head>
 <body>
-    
+    <p>
+        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Maiores iste enim voluptatibus, vitae quasi itaque nesciunt exercitationem quos fuga totam ex corrupti, provident molestias placeat iure error tenetur dolorem eaque.
+    </p>
 </body>
 </html>
